docs: sync CI-CD.md and DEPLOYMENT.md with current deployment workflow
- CI-CD.md: Remove Maven multi-stage Dockerfile (JAR pre-compiled locally),
  fix JVM flags from G1GC to ZGC + MaxRAMPercentage
- DEPLOYMENT.md: Update build step to clarify local pre-compile + upload
  for offline deployment, document init-nacos.sh skip-on-disabled behavior